fix overflow scroll for responsive phone design

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -142,6 +142,7 @@ body {
   .App {
     flex-direction: column;
     overflow: hidden;
+    height: auto;
   }
 
   .sidebar {
@@ -183,6 +184,7 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
+    height: 83vh;
   }
 
   .text h1{
